[gd_scene load_steps=86 format=2]

[ext_resource path="res://charapter/charapter.gd" type="Script" id=1]
[ext_resource path="res://charapter/sprites/_Run.png" type="Texture" id=2]
[ext_resource path="res://charapter/sprites/_Idle.png" type="Texture" id=3]
[ext_resource path="res://charapter/sprites/_Attack.png" type="Texture" id=4]
[ext_resource path="res://charapter/sprites/_JumpFallInbetween.png" type="Texture" id=5]
[ext_resource path="res://charapter/sprites/_Hit.png" type="Texture" id=6]
[ext_resource path="res://charapter/sprites/_Death.png" type="Texture" id=7]
[ext_resource path="res://charapter/sprites/_CrouchWalk.png" type="Texture" id=8]
[ext_resource path="res://charapter/sprites/_Attack2.png" type="Texture" id=9]
[ext_resource path="res://charapter/sprites/_Dash.png" type="Texture" id=10]
[ext_resource path="res://charapter/sprites/_WallClimbNoMovement.png" type="Texture" id=11]
[ext_resource path="res://charapter/sprites/_Crouch.png" type="Texture" id=12]
[ext_resource path="res://charapter/sprites/_CrouchAttack.png" type="Texture" id=13]
[ext_resource path="res://GGG.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=73]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleShape2D" id=74]
radius = 99.0
height = 174.0

[sub_resource type="CapsuleShape2D" id=75]
radius = 103.0
height = 70.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 120, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 360, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 720, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 840, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 960, 0, 120, 80 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1080, 0, 120, 80 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "stay",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": false,
"name": "attack2",
"speed": 10.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "crouch_walk",
"speed": 16.0
}, {
"frames": [ SubResource( 68 ) ],
"loop": true,
"name": "crouch_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": false,
"name": "crouch_attack",
"speed": 7.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": false,
"name": "wall_climb",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "jump",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": false,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 129, 102 )

[sub_resource type="Animation" id=33]
resource_name = "hit"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 99, 184 )

[node name="player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 2, 2 )
current = true
zoom = Vector2( 2, 2 )

[node name="health" type="ProgressBar" parent="Camera2D"]
margin_left = -501.0
margin_top = -294.0
margin_right = -180.0
margin_bottom = -270.0
grow_vertical = 2
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_styles/fg = SubResource( 73 )
rounded = true
allow_greater = true
allow_lesser = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stay_shape" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 0 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 74 )

[node name="crouch_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 24 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 75 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, -106 )
scale = Vector2( 5, 5 )
frames = SubResource( 26 )
animation = "stay"
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 130, -9 )
z_index = -1
shape = SubResource( 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 33 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -129, -9 )
z_index = -1
shape = SubResource( 32 )

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
visible = false
position = Vector2( 1.5, 0 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 31 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 2
position = Vector2( 1, 1.78814e-07 )
scale = Vector2( 62.4534, 37.8665 )
enabled = false
texture = ExtResource( 14 )
texture_scale = 50.0
shadow_enabled = true
shadow_gradient_length = 30.0
shadow_filter = 5
shadow_filter_smooth = 4.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
